--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ ass.log
 analyses/02_genome_assembly/soapdenovo/SOAPdenovo_output_K49.*
 analyses/02_genome_assembly/nucmer/sel2_NW_015504334.fna
 analyses/02_genome_assembly/nucmer/out.delta
+analyses/02_genome_assembly/mummerplot/out.*
