--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 ass.log 
+log_files/slurm_files/slurm-*
 analyses/02_genome_assembly/soapdenovo/SOAPdenovo_output_K49.*
 analyses/02_genome_assembly/nucmer/sel2_NW_015504334.fna
 analyses/02_genome_assembly/nucmer/out.delta
-analyses/02_genome_assembly/mummerplot/out.fplot
-analyses/02_genome_assembly/mummerplot/out.rplot
-analyses/02_genome_assembly/mummerplot/out.gp
+analyses/02_genome_assembly/mummerplot/run_1/out.fplot
+analyses/02_genome_assembly/mummerplot/run_1/out.rplot
+analyses/02_genome_assembly/mummerplot/run_1/out.gp
+analyses/02_genome_assembly/mummerplot/run_2/out.fplot
+analyses/02_genome_assembly/mummerplot/run_2/out.rplot
+analyses/02_genome_assembly/mummerplot/run_2/out.gp
