update gitignore with output from maker

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ analyses/03_rna_assembly/mummerplot/out.rplot
 analyses/03_rna_assembly/nucmer/
 analyses/03_rna_assembly/tophat_before_trinity/
 analyses/03_rna_assembly/trinity/
+
+analyses/04_annotation/structural_annotation/maker2/
