--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,6 @@ analyses/05_differential_expression/htseq
 analyses/05_differential_expression/htseq_different_samples
 analyses/05_differential_expression/samtools
 analyses/05_differential_expression/tophat_different_samples
+analyses/05_differential_expression/tophat_different_samples_2
 
 data
