result from eggnogmapper

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ analyses/03_rna_assembly/nucmer/
 analyses/03_rna_assembly/tophat_before_trinity/
 analyses/03_rna_assembly/trinity/
 
-analyses/04_annotation
+analyses/04_annotation/structural_annotation
 
 analyses/05_differential_expression/htseq
 analyses/05_differential_expression/htseq_different_samples
